# htauth

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  msrv.yml
crates/htauth/: Cargo.toml  README.md
crates/htauth-cli/: Cargo.toml  README.md
crates/htauth-cli/src/: main.rs
crates/htauth-cli/tests/: cli.rs
crates/htauth/src/: apr1_md5.rs  error.rs  hash.rs  htpasswd.rs  lib.rs
src/: apr1_md5.rs  bin.rs  error.rs  hash.rs  htpasswd.rs  lib.rs
tests/: cli.rs  compatibility.rs  compatibility.sh
