[package]
name = "htpasswd-rs"
version = "0.1.0"
edition = "2024"
description = "A lightweight alternative to Apache's htpasswd tool"
license = "MIT OR Apache-2.0"

[dependencies]
bcrypt = "0.16"
sha-crypt = {version = "0.6.0-rc.2", features = ["getrandom"]}
getrandom = "0.3"
md-5 = "0.10"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
rpassword = "7.4"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.14"

[[bin]]
name = "htpasswd"
path = "src/bin.rs"
