[workspace]
resolver = "3"
members = ["crates/htauth", "crates/htauth-cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A library and CLI tool for managing htpasswd files"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Dev dependency shared across crates
tempfile = "3.14"
