[workspace]
resolver = "3"
members = ["crates/htauth", "crates/htauth-cli"]

[workspace.package]
version = "0.1.1"
edition = "2024"
rust-version = "1.88"
description = "A library and CLI tool for managing htpasswd files"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mexus/htauth"

[workspace.dependencies]
# Dev dependency shared across crates
tempfile = "3.14"
# Error handling
snafu = "0.8"
# Security
zeroize = "1.8"
