[package]
name = "htauth-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true

[[bin]]
name = "htauth"
path = "src/main.rs"

[dependencies]
htauth = { path = "../htauth" }
snafu = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
rpassword = "7.4"
zeroize = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
