[package]
name = "htauth-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "A CLI tool for managing htpasswd files"
readme = "README.md"

[[bin]]
name = "htauth"
path = "src/main.rs"

[dependencies]
htauth = { version = "0.1", path = "../htauth" }
snafu = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
rpassword = "7.4"
zeroize = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
