[package]
name = "htauth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/htauth"
description = "A library for managing htpasswd files"
readme = "README.md"

[dependencies]
bcrypt = "0.18"
sha-crypt = { version = "0.6.0-rc.2", features = ["getrandom"] }
getrandom = "0.3"
md-5 = "0.10"
snafu = { workspace = true }
subtle = "2"
zeroize = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
